[gd_scene load_steps=5 format=3 uid="uid://dkuyw1nernofl"]

[ext_resource type="Script" path="res://dungeons/dungeon.gd" id="1_nxpj6"]
[ext_resource type="Texture2D" uid="uid://baof36onnmqok" path="res://textures/backgrounds/forest 1.png" id="2_wyd2a"]
[ext_resource type="PackedScene" uid="uid://db1yl4x31310m" path="res://ui/ui.tscn" id="3_sqkxu"]
[ext_resource type="PackedScene" uid="uid://cisxy0ycflxkj" path="res://player/player.tscn" id="5_30oj4"]

[node name="dungeon" type="Node2D"]
script = ExtResource("1_nxpj6")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(200, 72)
texture = ExtResource("2_wyd2a")

[node name="player" parent="." instance=ExtResource("5_30oj4")]
position = Vector2(56, 88)
maxSanity = 100.0
maxMana = 100.0
mindPower = 30.0
strength = 20.0
maxHealth = 100.0

[node name="player mouse detect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 16.0
offset_right = 88.0
offset_bottom = 120.0

[node name="enemy mouse detect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 288.0
offset_top = 16.0
offset_right = 352.0
offset_bottom = 120.0

[node name="ui" parent="." instance=ExtResource("3_sqkxu")]

[node name="screen block" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 240.0

[node name="Marker2D" type="Marker2D" parent="."]
visible = false
position = Vector2(320, 88)

[connection signal="death" from="player" to="." method="_on_player_death"]
[connection signal="got_damaged" from="player" to="." method="_on_player_got_damaged"]
[connection signal="mouse_entered" from="player mouse detect" to="." method="_on_player_mouse_detect_mouse_entered"]
[connection signal="mouse_entered" from="enemy mouse detect" to="." method="_on_enemy_mouse_detect_mouse_entered"]
[connection signal="attackChosen" from="ui" to="." method="_on_ui_attack_chosen"]
[connection signal="itemUsed" from="ui" to="." method="_on_ui_item_used"]
[connection signal="nextLevelPressed" from="ui" to="." method="_on_ui_next_level_pressed"]
